[package]
name = "credulous-rustls-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustls = {version = "0.21.5", features = ["dangerous_configuration"]}
time ={version = "0.3.23",features = ["local-offset"]}
rcgen = "0.11.1"